# Stellar-Game-Studio

./: .env.example  Cargo.toml  README.md  package-lock.json  package.json
circuits/zk-porrinha/: .gitignore  Nargo.toml  Prover.toml.example  QUICKSTART.md  README.md  dockerfile-vk  package-lock.json  package.json  test_hash.nr  vk.json
circuits/zk-porrinha-hasher/: Nargo.toml
circuits/zk-porrinha-hasher/src/: main.nr
circuits/zk-porrinha/scripts/: generate-commitment.js
circuits/zk-porrinha/src/: main.nr
contracts/noir-verifier/: Cargo.toml
contracts/noir-verifier/src/: lib.rs  vk.rs
contracts/ultrahonk_soroban_verifier/: Cargo.toml
contracts/ultrahonk_soroban_verifier/src/: lib.rs
contracts/zk-porrinha/: Cargo.toml  README.md
contracts/zk-porrinha/src/: lib.rs  test.rs
docs/: index.html
docs/assets/: index-DYSRGkyH.css  index-Dn-znE0A.js
frontend/src/components/: GamesCatalog.css  GamesCatalog.tsx
scripts/: deploy.ts  test-real-prover.ts
zk-porrinha-frontend/: .env.example  index.html  package.json  test-integration.ts  vite.config.ts
zk-porrinha-frontend/public/: circuit.json  game-studio-config.js  zk_porrinha.json
zk-porrinha-frontend/src/: App.tsx  config.ts
zk-porrinha-frontend/src/games/zk-porrinha/: BalanceDisplay.tsx  PixelLayout.tsx  TransactionInfo.tsx  TransferAnimation.tsx  ZkPorrinhaGame.tsx  bindings.ts  crypto.ts  localGameState.ts  mockProver.ts  poseidon.ts  poseidonNoir.ts  realProver.ts  secrets.ts  verifier.ts  zkPorrinhaService.ts
zk-porrinha-frontend/src/utils/: constants.ts
(+10 files in other folders)
