[workspace]
resolver = "2"
version = "0.1.2"
members = [
  "contracts/mock-game-hub",
  "contracts/twenty-one",
  "contracts/number-guess",
  "contracts/dice-duel",
  "contracts/zk-porrinha",
  "contracts/noir-verifier",
  "contracts/ultrahonk_soroban_verifier",
]

[workspace.dependencies]
soroban-sdk = "25.0.2"
ultrahonk_soroban_verifier = { path = "contracts/ultrahonk_soroban_verifier" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
